# ballastlane-prescriberpoint

./: docker-compose.yaml  package.json
api/: Dockerfile  README.md  package.json  tsconfig.build.tsbuildinfo
api/src/: app.module.ts
api/src/drugs/: drugs.module.ts
api/src/drugs/controllers/: drugs.controller.spec.ts  drugs.controller.ts
api/src/drugs/entities/: drugs.entity.ts
api/src/drugs/services/: drugs.service.ts
api/src/migration/: data-source.ts
llm/: .env  Dockerfile  requirements.txt
llm/rag_llm_model/: main.py
llm/rag_llm_model/embedding/: text_segmentation.py
llm/rag_llm_model/groq_custom/: groq_api_connect.py
llm/rag_llm_model/train/: train.py
llm/src/: main.py
scrapper/: .env  Dockerfile  requirements.txt
scrapper-and-llm/: Dockerfile  README.md  pyproject.toml
scrapper-and-llm/db/: models.py
scrapper-and-llm/scrap/: dailymed.py
scrapper-and-llm/scrapper/: dailymed.py
scrapper-and-llm/src/: main.py
scrapper/daily_med_scrapper/: dailymed.py
scrapper/src/: __init__.py  main.py
ui/: README.md  package.json
