    [project]
    name = "scrapper-and-llm"
    version = "0.1.0"
    description = "This module will be responsible for scraping and LLM"
    authors = [
        {name = "rpablogomes",email = "rpablo.gdr@gmail.com"}
    ]
    requires-python = ">=3.12"
    dependencies = [
        "fastapi[standard] (>=0.115.12,<0.116.0)",
        "uvicorn" ,
        "beautifulsoup4 (>=4.13.4,<5.0.0)",
        "requests (>=2.32.3,<3.0.0)" 
    ]

    [tool.poetry]
    packages = [{include = "scrapper_and_llm", from = "src"}]

    [build-system]
    requires = ["poetry-core>=2.0.0,<3.0.0"]
    build-backend = "poetry.core.masonry.api"
